Make project demo works
