# routes/generated-gleece.go
@@ -1,0 +1,401 @@
+/*
+--
+This file is automatically generated. Any manual changes to this file may be overwritten.
+It includes routes and handlers by the Gleece API Routes Generator.
+--
+Authors: Haim Kastner & Yuval Pomerchik
+Generated by: Gleece Routes Generator
+Generated Date: 24 Jan 25 12:03 IST
+--
+Usage:
+Refer to the Gleece documentation for details on how to use the generated routes and handlers.
+--
+Repository: https://github.com/gopher-fleece/gleece
+--
+*/
+package routes
+import (
+	"encoding/json"
+	"fmt"
+	"io"
+	"net/http"
+	"reflect"
+	"regexp"
+	"strconv"
+	"strings"
+	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
+	"github.com/gopher-fleece/gleece/external"
+	"github.com/gopher-fleece/gleece/infrastructure/validation"
+	Param6domicile "github.com/gopher-fleece/gleecexample/controllers"
+	UsersControllerImport "github.com/gopher-fleece/gleecexample/controllers"
+	RequestAuth "github.com/gopher-fleece/gleecexample/security"
+	CustomValidatorPkg0 "github.com/gopher-fleece/gleecexample/validators"
+)
+var validatorInstance *validator.Validate
+var urlParamRegex *regexp.Regexp
+type SecurityListRelation string
+const (
+	SecurityListRelationAnd SecurityListRelation = "AND"
+)
+type SecurityCheckList struct {
+	Checks   []external.SecurityCheck
+	Relation SecurityListRelation
+}
+func getStatusCode(controller external.Controller, hasReturnValue bool, err error) int {
+	if controller.GetStatus() != nil {
+		return int(*controller.GetStatus())
+	}
+	if err != nil {
+		return http.StatusInternalServerError
+	}
+	if hasReturnValue {
+		return http.StatusOK
+	}
+	return http.StatusNoContent
+}
+func bindAndValidateBody[TOutput any](ctx *gin.Context, contentType string, output **TOutput) error {
+	var err error
+	bodyBytes, err := io.ReadAll(ctx.Request.Body)
+	if err != nil {
+		return err
+	}
+	// TODO: Do we need support primitive body????
+	var deserializedOutput TOutput
+	switch contentType {
+	case "application/json":
+		err = json.Unmarshal(bodyBytes, &deserializedOutput)
+	default:
+		return fmt.Errorf("content-type %s is not currently supported by the validation subsystem", contentType)
+	}
+	if err != nil {
+		return err
+	}
+	if err = validatorInstance.Struct(&deserializedOutput); err != nil {
+		return err
+	}
+	*output = &deserializedOutput
+	return nil
+}
+func toGinUrl(url string) string {
+	processedUrl := urlParamRegex.ReplaceAllString(url, ":$1")
+	processedUrl = strings.ReplaceAll(processedUrl, "//", "/")
+	if processedUrl == "" {
+		return "/"
+	}
+	if !strings.HasPrefix(processedUrl, "/") {
+		processedUrl = "/" + processedUrl
+	}
+	return processedUrl
+}
+func authorize(ctx *gin.Context, checksLists []SecurityCheckList) *external.SecurityError {
+	var lastError *external.SecurityError
+	for _, list := range checksLists {
+		if list.Relation != SecurityListRelationAnd {
+			panic(
+				"Encountered a security list relation of type '%s' - this is unexpected and indicates a bug in Gleece itself." +
+					"Please open an issue at https://github.com/gopher-fleece/gleece/issues",
+			)
+		}
+		// Iterate over each security list
+		encounteredErrorInList := false
+		for _, check := range list.Checks {
+			secErr := RequestAuth.GleeceRequestAuthorization(ctx, check)
+			if secErr != nil {
+				lastError = secErr
+				encounteredErrorInList = true
+				break
+			}
+		}
+		// If no error was encountered, validation is considered successful
+		// otherwise, we continue over to the next iteration whilst keeping track of the last error
+		if !encounteredErrorInList {
+			return nil
+		}
+	}
+	// If we got here it means authentication has failed
+	return lastError
+}
+func handleAuthorizationError(ctx *gin.Context, authErr *external.SecurityError, operationId string) {
+	statusCode := int(authErr.StatusCode)
+	if authErr.CustomError != nil {
+		// For now, we support JSON only
+		ctx.JSON(statusCode, authErr.CustomError.Payload)
+		return
+	}
+	stdError := external.Rfc7807Error{
+		Type:     http.StatusText(statusCode),
+		Detail:   authErr.Message,
+		Status:   statusCode,
+		Instance: "/gleece/authorization/" + operationId,
+	}
+	ctx.JSON(statusCode, stdError)
+}
+func RegisterRoutes(engine *gin.Engine) {
+	validatorInstance = validator.New()
+	urlParamRegex = regexp.MustCompile(`\{([\w\d-_]+)\}`)
+	validatorInstance.RegisterValidation("validate_starts_with_letter", func(fl validator.FieldLevel) bool {
+		return CustomValidatorPkg0.ValidateStartsWithLetter(fl)
+	})
+	// UsersController
+	engine.POST(toGinUrl("/users/user/{user_name}/{user_id}/{serial}"), func(ctx *gin.Context) {
+		authErr := authorize(
+			ctx,
+			[]SecurityCheckList{
+				{
+					Relation: SecurityListRelationAnd,
+					Checks: []external.SecurityCheck{
+						{
+							SchemaName: "securitySchemaName",
+							Scopes: []string{
+								"read:users",
+								"write:users",
+							},
+						},
+					},
+				},
+			},
+		)
+		if authErr != nil {
+			handleAuthorizationError(ctx, authErr, "CreateNewUser")
+			return
+		}
+		controller := UsersControllerImport.UsersController{}
+		controller.SetRequest(ctx)
+		var conversionErr error
+		idRaw := ctx.Param("user_id")
+		idUint64, conversionErr := strconv.Atoi(idRaw)
+		if conversionErr != nil {
+			validationError := external.Rfc7807Error{
+				Type: http.StatusText(http.StatusUnprocessableEntity),
+				Detail: fmt.Sprintf(
+					"A request was made to operation 'CreateNewUser' but parameter '%s' was not properly sent - Expected %s but got %s",
+					"id",
+					"int",
+					reflect.TypeOf(idRaw).String(),
+				),
+				Status:     http.StatusUnprocessableEntity,
+				Instance:   "/gleece/validation/Users/CreateNewUser",
+				Extensions: map[string]string{"error": conversionErr.Error()},
+			}
+			ctx.JSON(http.StatusUnprocessableEntity, validationError)
+			return
+		}
+		id := int(idUint64)
+		if validatorErr := validatorInstance.Var(id, "gt=1,required"); validatorErr != nil {
+			fieldName := "id"
+			validationError := external.Rfc7807Error{
+				Type: http.StatusText(http.StatusUnprocessableEntity),
+				Detail: fmt.Sprintf(
+					"A request was made to operation 'CreateNewUser' but parameter '%s' did not pass validation - %s",
+					fieldName,
+					validation.ExtractValidationErrorMessage(validatorErr, &fieldName),
+				),
+				Status:   http.StatusUnprocessableEntity,
+				Instance: "/gleece/validation/Users/CreateNewUser",
+			}
+			ctx.JSON(http.StatusUnprocessableEntity, validationError)
+			return
+		}
+		serialRaw := ctx.Param("serial")
+		serialUint64, conversionErr := strconv.Atoi(serialRaw)
+		if conversionErr != nil {
+			validationError := external.Rfc7807Error{
+				Type: http.StatusText(http.StatusUnprocessableEntity),
+				Detail: fmt.Sprintf(
+					"A request was made to operation 'CreateNewUser' but parameter '%s' was not properly sent - Expected %s but got %s",
+					"serial",
+					"int",
+					reflect.TypeOf(serialRaw).String(),
+				),
+				Status:     http.StatusUnprocessableEntity,
+				Instance:   "/gleece/validation/Users/CreateNewUser",
+				Extensions: map[string]string{"error": conversionErr.Error()},
+			}
+			ctx.JSON(http.StatusUnprocessableEntity, validationError)
+			return
+		}
+		serial := int(serialUint64)
+		if validatorErr := validatorInstance.Var(serial, "gte=10,required"); validatorErr != nil {
+			fieldName := "serial"
+			validationError := external.Rfc7807Error{
+				Type: http.StatusText(http.StatusUnprocessableEntity),
+				Detail: fmt.Sprintf(
+					"A request was made to operation 'CreateNewUser' but parameter '%s' did not pass validation - %s",
+					fieldName,
+					validation.ExtractValidationErrorMessage(validatorErr, &fieldName),
+				),
+				Status:   http.StatusUnprocessableEntity,
+				Instance: "/gleece/validation/Users/CreateNewUser",
+			}
+			ctx.JSON(http.StatusUnprocessableEntity, validationError)
+			return
+		}
+		emailRaw := ctx.Query("email")
+		email := emailRaw
+		if validatorErr := validatorInstance.Var(email, "required,email"); validatorErr != nil {
+			fieldName := "email"
+			validationError := external.Rfc7807Error{
+				Type: http.StatusText(http.StatusUnprocessableEntity),
+				Detail: fmt.Sprintf(
+					"A request was made to operation 'CreateNewUser' but parameter '%s' did not pass validation - %s",
+					fieldName,
+					validation.ExtractValidationErrorMessage(validatorErr, &fieldName),
+				),
+				Status:   http.StatusUnprocessableEntity,
+				Instance: "/gleece/validation/Users/CreateNewUser",
+			}
+			ctx.JSON(http.StatusUnprocessableEntity, validationError)
+			return
+		}
+		nameRaw := ctx.Param("user_name")
+		name := nameRaw
+		if validatorErr := validatorInstance.Var(name, "required"); validatorErr != nil {
+			fieldName := "name"
+			validationError := external.Rfc7807Error{
+				Type: http.StatusText(http.StatusUnprocessableEntity),
+				Detail: fmt.Sprintf(
+					"A request was made to operation 'CreateNewUser' but parameter '%s' did not pass validation - %s",
+					fieldName,
+					validation.ExtractValidationErrorMessage(validatorErr, &fieldName),
+				),
+				Status:   http.StatusUnprocessableEntity,
+				Instance: "/gleece/validation/Users/CreateNewUser",
+			}
+			ctx.JSON(http.StatusUnprocessableEntity, validationError)
+			return
+		}
+		originRaw := ctx.GetHeader("x-origin")
+		origin := originRaw
+		if validatorErr := validatorInstance.Var(origin, "validate_starts_with_letter,required"); validatorErr != nil {
+			fieldName := "origin"
+			validationError := external.Rfc7807Error{
+				Type: http.StatusText(http.StatusUnprocessableEntity),
+				Detail: fmt.Sprintf(
+					"A request was made to operation 'CreateNewUser' but parameter '%s' did not pass validation - %s",
+					fieldName,
+					validation.ExtractValidationErrorMessage(validatorErr, &fieldName),
+				),
+				Status:   http.StatusUnprocessableEntity,
+				Instance: "/gleece/validation/Users/CreateNewUser",
+			}
+			ctx.JSON(http.StatusUnprocessableEntity, validationError)
+			return
+		}
+		traceRaw := ctx.GetHeader("trace")
+		trace := traceRaw
+		if validatorErr := validatorInstance.Var(trace, "required"); validatorErr != nil {
+			fieldName := "trace"
+			validationError := external.Rfc7807Error{
+				Type: http.StatusText(http.StatusUnprocessableEntity),
+				Detail: fmt.Sprintf(
+					"A request was made to operation 'CreateNewUser' but parameter '%s' did not pass validation - %s",
+					fieldName,
+					validation.ExtractValidationErrorMessage(validatorErr, &fieldName),
+				),
+				Status:   http.StatusUnprocessableEntity,
+				Instance: "/gleece/validation/Users/CreateNewUser",
+			}
+			ctx.JSON(http.StatusUnprocessableEntity, validationError)
+			return
+		}
+		var domicileRef *Param6domicile.Domicile
+		conversionErr = bindAndValidateBody(ctx, "application/json", &domicileRef)
+		if conversionErr != nil {
+			validationError := external.Rfc7807Error{
+				Type: http.StatusText(http.StatusUnprocessableEntity),
+				Detail: fmt.Sprintf(
+					"A request was made to operation 'CreateNewUser' but body parameter '%s' did not pass validation of '%s' - %s",
+					"domicile",
+					"Domicile",
+					validation.ExtractValidationErrorMessage(conversionErr, nil),
+				),
+				Status:   http.StatusUnprocessableEntity,
+				Instance: "/gleece/validation/Users/CreateNewUser",
+			}
+			ctx.JSON(http.StatusUnprocessableEntity, validationError)
+			return
+		}
+		domicile := *domicileRef
+		value, opError := controller.CreateNewUser(id, serial, email, name, origin, trace, domicile)
+		statusCode := getStatusCode(&controller, true, opError)
+		if opError != nil {
+			stdError := external.Rfc7807Error{
+				Type:       http.StatusText(statusCode),
+				Detail:     "Encountered an error during operation 'CreateNewUser'",
+				Status:     statusCode,
+				Instance:   "/gleece/controller/error/CreateNewUser",
+				Extensions: map[string]string{"error": opError.Error()},
+			}
+			ctx.JSON(statusCode, stdError)
+			return
+		}
+		ctx.JSON(statusCode, value)
+	})
+	engine.GET(toGinUrl("/users/domicile/{id}"), func(ctx *gin.Context) {
+		authErr := authorize(
+			ctx,
+			[]SecurityCheckList{
+				{
+					Relation: SecurityListRelationAnd,
+					Checks: []external.SecurityCheck{
+						{
+							SchemaName: "securitySchemaName",
+							Scopes: []string{
+								"read:users",
+							},
+						},
+					},
+				},
+				{
+					Relation: SecurityListRelationAnd,
+					Checks: []external.SecurityCheck{
+						{
+							SchemaName: "securitySchemaName",
+							Scopes: []string{
+								"read:all_data",
+							},
+						},
+					},
+				},
+			},
+		)
+		if authErr != nil {
+			handleAuthorizationError(ctx, authErr, "GetUserDomicile")
+			return
+		}
+		controller := UsersControllerImport.UsersController{}
+		controller.SetRequest(ctx)
+		idRaw := ctx.Param("id")
+		id := idRaw
+		if validatorErr := validatorInstance.Var(id, "required"); validatorErr != nil {
+			fieldName := "id"
+			validationError := external.Rfc7807Error{
+				Type: http.StatusText(http.StatusUnprocessableEntity),
+				Detail: fmt.Sprintf(
+					"A request was made to operation 'GetUserDomicile' but parameter '%s' did not pass validation - %s",
+					fieldName,
+					validation.ExtractValidationErrorMessage(validatorErr, &fieldName),
+				),
+				Status:   http.StatusUnprocessableEntity,
+				Instance: "/gleece/validation/Users/GetUserDomicile",
+			}
+			ctx.JSON(http.StatusUnprocessableEntity, validationError)
+			return
+		}
+		value, opError := controller.GetUserDomicile(id)
+		statusCode := getStatusCode(&controller, true, opError)
+		if opError != nil {
+			stdError := external.Rfc7807Error{
+				Type:       http.StatusText(statusCode),
+				Detail:     "Encountered an error during operation 'GetUserDomicile'",
+				Status:     statusCode,
+				Instance:   "/gleece/controller/error/GetUserDomicile",
+				Extensions: map[string]string{"error": opError.Error()},
+			}
+			ctx.JSON(statusCode, stdError)
+			return
+		}
+		ctx.JSON(statusCode, value)
+	})
+}
